--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "@fortawesome/fontawesome-free": "5.10.2",
+    "angularfire2": "^5.2.1",
     "bootstrap": "^4.3.1",
+    "firebase": "^6.6.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
