--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angularfire2": "^5.2.1",
     "bootstrap": "^4.3.1",
     "firebase": "^6.6.0",
+    "ngx-image-cropper": "^1.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
